chore: re-enable plugin functional tests
Workflow is run new pull request against either develop or main branches.
At present, only the `functional-regressions-jdk17` job is enabled.
Test reports are archived as job artifacts, with 3 day retention.

The task `plugins:gradle:functionalTests` is added as a dependency of
the default `check` task.